--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "graphql-compose": "^9.0.11",
     "http-server": "^14.1.1",
+    "intersection-observer": "^0.12.2",
     "lodash": "^4.17.19",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
